# upstageailab-ir-competition-ir-2

./: .env.example  .env.uv  .gitignore  .gitingestignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.dev  Dockerfile.prod  ENGLISH_RAG_STATUS.md  README.local.md  README.md  README2.md  README4.md  SETUP.md  SMOKE_TEST.md  assessment-report.md  check-ssh-status.sh  cli.py  cli_menu.py  comprehensive-analysis-plan.md  connect-container.sh  debug-plan-progress.md  docker-compose.dev.yml  docker-compose.yml  docker-helper.sh  download_model.py  elasticsearch.yml  evaluate_retrieval.py  hydra-usage-guide.md  improve-performance-ideas01.md  install_nvidia_drivers.sh  ir-refactor-plan.md  ir-refactore-plan.md  ir-refactore-plan2.md  kibana.yml  pyproject.toml  pytest.ini  query-enhancement-examples.md  (+17 more)
.ai/: README.md
.ai/assistant-instructions/: copilot-instructions.md
.ai/context/: DATASET_DOCUMENTATION.md
.github/: copilot-instructions.md  data-context.md
.github/workflows/: ci.yml
cli_menu/: __init__.py
cli_menu/modules/: __init__.py  command_executor.py  configuration_menu.py  data_management_menu.py  evaluation_menu.py  experiments_menu.py  setup_menu.py  translation_menu.py  utilities_menu.py
conf/: config.yaml  config.yaml.backup  embedding_profiles.yaml  hydra.yaml  settings.yaml  settings_copy.yaml  settings_no_hyde.yaml
conf/core/: base.yaml
conf/data/: science_qa.yaml  science_qa_bilingual.yaml  science_qa_ko.yaml  science_qa_ko_metadata.yaml
conf/experiment/: prompt_tuning.yaml
conf/model/: default.yaml  default.yaml.backup
conf/params/: base.yaml
conf/paths/: base.yaml
conf/pipeline/: default.yaml  hybrid-ollama.yaml  hybrid-qwen-llama.yaml  klue-roberta.yaml  llama-full.yaml  ollama-full.yaml  ollama-llama.yaml  ollama.yaml  qwen-full.yaml
conf/prompts/: base.yaml  default.yaml
data/: documents_en.jsonl  documents_en2.jsonl  documents_en_onnx.jsonl  documents_en_test2.jsonl  eval-test.jsonl  eval_enhanced.jsonl  processed_scientific_keywords.json  scientific_terms.json  validation.jsonl  validation_balanced.jsonl  validation_balanced_en.jsonl
docs/: CI.md  CLI_QUICK_REFERENCE.md  CLI_TOOL_README.md  CONFIDENCE_QUICKREF.md  CONFIDENCE_SCORING.md  CONFIG_INTEGRATION_SUGGESTIONS.md  EMBEDDING_PROFILES_INDEXES.md  FINE_TUNING_GUIDE.md  POETRY_USAGE.md  RAG_ENHANCEMENT_PLAN.md  RAG_RETRIEVAL_DEBUG_REPORT.md  README_KIBANA.md  README_KIBANA_DASHBOARD.md  README_REINDEX_ORCHESTRATOR.md  README_solar_api.md  README_switch_config.md  RETRIEVAL_DEBUG_GUIDE.md  cli.1.md  docker-less.md  ppt-mermaid copy.md  ppt-mermaid.md  profiling-retrieval-guide.md  reindex_audit_mapping.json
docs/current-work/: ENGLISH_RAG_STATUS.md  RAG_ENHANCEMENT_PLAN.md  README.md  overall-plan-example-roadmap.md  phase1-completion-summary.md  phase1-implementation-plan.md  phase1-integration-report.md  profiling-implementation-plan.md  profiling-plan.md  profiling-progress.md  query-enhancement-recommendations.md  query-plan.md  screenshots.md  understanding-data.md
docs/development/: README.md  index-naming-convention.md
docs/examples/: README.md
docs/guides/: EMBEDDING_MANAGEMENT_GUIDE_KO.md  README.md  fix-suggestions.md  max-token-kength-recommendation.md
docs/kibana_saved_objects/: reindex_audit_dashboard_full.json  reindex_audit_saved_objects.json
docs/notes/: diagram.md  ir-refactore-plan..md  project-overview.md  project-state-0908.md
docs/planning/: data_context.md  reorganization-plan.md  (+1 more)
prompts/: classify_intent.jinja2  conversational_redirect_v1.jinja2  conversational_v1.jinja2  persona_qa.txt  query_analyzer.jinja2  question_generation_v1.jinja2  rephrase_query_v1.jinja2  rewrite_query.jinja2  rewrite_query2.jinja2  rewrite_query3.jinja2  scientific_qa_v1.jinja2  tool_desc_recall_v1.txt
scripts/: README.md  analyze_eval_data.py  cleanup-distros.sh  cli.py  cli_menu.py  cli_menu_legacy.py  create_validation_set.py  demo_ollama_integration.py  evaluate.py  fine_tune_embedding.py  fine_tune_retrieval.py  generate_topics.py  list_scripts.py  manage-services.sh  project-aliases.sh  reindex.py  run-local.sh  run_hyperparameter_tuning.sh  run_query.py  run_rag.py  setup-path.sh  smoke-test.sh  smoke_test.py  start-elasticsearch.sh  start-redis.sh  swap_alias.py  switch_config.py  test_fine_tuned_models.py  test_visualizer.py  trim_submission.py  validate_domain_classification.py  validate_retrieval.py  visualize_results.py  visualize_submissions.py
src/: scripts_utils.py
tests/: conftest.py  test_analysis_components.py  test_evaluation.py  test_index_orchestrator.py  test_index_orchestrator_http.py  test_index_orchestrator_rollback.py  test_integration_pipeline.py  test_query_components.py  test_query_enhancement.py  test_reindex_batching.py  test_reindex_orchestrator_helpers.py  test_retrieval.py  test_utils.py
(+241 files in other folders)
