[tool.poetry]
name = "information_retrieval_rag"
version = "0.1.0"
description = "Modular RAG infra for experiments and submissions"
authors = ["wchoi189 <wchoi189@gmail.com>"]
packages = [
	{ include = "ir_core", from = "src" }
]

[tool.poetry.scripts]
evaluate = "scripts.evaluate:main"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
elasticsearch = "^8.8.0"
transformers = "^4.56.1"
sentencepiece = "^0.2.1"
scikit-learn = "^1.7.1"
openai = "^1.106.1"
torch = "^2.6.0"
numpy = "^1.26.0"
python-dotenv = "^1.0.0"
hydra-core = "^1.3"
wandb = "^0.15.0"
redis = "^4.5.5"
icecream = "^2.1.2"
fire = "^0.5.0"
pytest = "^7.4"
pydantic = "^1.10"
Jinja2 = "^3.1.4"
streamlit = "^1.49.1"
pandas = "^2.3.2"
bertopic = "^0.17.3"

[poetry.group.dev.dependencies]
black = "^24.3"
ruff = "^0.7"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
