[tool.poetry]
name = "information_retrieval_rag"
version = "0.1.0"
description = "Modular RAG infra for experiments and submissions"
authors = ["wchoi189 <wchoi189@gmail.com>"]
packages = [
	{ include = "ir_core", from = "src" }
]

[tool.poetry.scripts]
evaluate = "scripts.evaluate:main"
cli = "scripts.cli_menu:main"

[tool.poetry.dependencies]
python = "^3.10"

uvicorn = {extras = ["standard"], version = "^0.21.1"}
elasticsearch = "^8.8.0"
transformers = "^4.56.1"
requests = "^2.31.0"
sentencepiece = "^0.2.1"
scikit-learn = "^1.7.1"
openai = "^1.106.1"
torch = "^2.6.0"
numpy = "^1.26.0"
omegaconf = "^2.0"
python-dotenv = "^1.0.0"
hydra-core = "^1.3"
wandb = "^0.21.3"
redis = "^4.5.5"
icecream = "^2.1.2"
fire = "^0.5.0"
pytest = "^7.4"
pydantic = "^2.0"
pydantic-settings = "^2.0"
Jinja2 = "^3.1.4"
rich = "^13.7.0"
questionary = "^2.0.1"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
plotly = "^6.3.0"
kaleido = "^1.1.0"
instructor = "^1.11.3"
fastapi = "^0.116.1"
streamlit = "^1.49.1"
pandas = "^2.3.2"
accelerate = "^0.20.0"
bitsandbytes = "^0.41.0"
# googletrans = "4.0.0rc1"  # Commented out due to httpx compatibility issues
nltk = "^3.8.1"
tqdm = "^4.67.1"
sacremoses = "^0.1.1"
datasets = "^4.0.0"
optimum = "^1.20.0"
onnxruntime-gpu = "^1.18.0"
onnx = "^1.16.2"
googletrans = "4.0.2"
ruamel-yaml = "^0.18.15"

[poetry.group.dev.dependencies]
black = "^24.3"
ruff = "^0.7"
tqdm = "^4.66.1"
pytest-asyncio = "0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
